fix-word-wrap

--- a/blocks/popup/__input-error/popup__input-error.css
+++ b/blocks/popup/__input-error/popup__input-error.css
@@ -2,20 +2,17 @@
     font-family: 'Inter', 'Arial', 'Helvetica', sans-serif;
     font-style: normal;
     font-weight: 400;
-    width: 358px;
     height: 30px;
     z-index: 1;
     font-size: 12px;
     line-height: 15px;
     color: #FF0000;
     display: block;
-    /* position: absolute; */
     margin: 0 auto;
     margin-bottom: 5px; 
 }
 @media screen and (max-width: 480px) {
     .popup__input-error {
-        width: 200px;
         height: 20px;
         font-size: 9px;
         line-height: 10px;
