--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -13,7 +13,3 @@
     border-bottom: 1px solid rgba(0, 0, 0, 0.2);
     padding-bottom: 12px;
   }
-
-  .popup__input:first-of-type {
-    margin-bottom: 30px;
-  }
